--- a/clanak.html
+++ b/clanak.html
@@ -34,7 +34,7 @@
             <div class="row"> 
                 <p class="category">
                     <?php echo $category; ?></p> 
-                    <h1 class="title"><?php echo $title; ?></h1> 
+                    <h1 class=""><?php echo $title; ?></h1> 
                     <p>AUTOR:</p> <p>OBJAVLJENO:</p> 
                 </div> 
                 <section class="slika"> <?php echo "<img src='img/$image'"; ?> </section> 
