--- a/unos.html
+++ b/unos.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a href="unos.html">Unos</a></li>
                     <li><a href="administrator.php" class="">Administracija</a></li>
                     <li><a href="registracija.php">Registracija</a></li>
+                    <li><a href="prijava.php">Prijava</a></li>
                 </ul>
                 </div>
             </nav>
@@ -146,9 +147,9 @@
                 } 
             }; 
     </script>
-    
     <footer class="footer">
         <p>Copyright 2019 GmBh</p>
     </footer>
+    
 </body>
 </html>
